// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timepicker-manager renders classic path and matches snapshot 1`] = `
<timepicker-manager>
  <timepicker-component><pre class="stub-props">{
  "kind": "classic",
  "ariaLabel": null,
  "ariaLabelledby": null,
  "ariaDescribedby": null,
  "showLabel": false,
  "labelText": "Enter Time",
  "inputId": "time-input",
  "inputName": "time",
  "value": "",
  "isTwentyFourHourFormat": true,
  "size": "",
  "inputWidth": null,
  "validationMessage": "",
  "validation": false,
  "isValid": true,
  "twentyFourHourOnly": false,
  "twelveHourOnly": false,
  "hideTimepickerBtn": false,
  "hideSeconds": false,
  "required": false,
  "timeInputThrottleMs": 50,
  "disableTimepicker": false
}</pre>
  </timepicker-component>
</timepicker-manager>
`;

exports[`timepicker-manager renders plumage path and matches snapshot 1`] = `
<timepicker-manager use-pl-timepicker="">
  <plumage-timepicker-component><pre class="stub-props">{
  "kind": "plumage",
  "ariaLabel": null,
  "ariaLabelledby": null,
  "ariaDescribedby": null,
  "showLabel": false,
  "labelText": "Enter Time",
  "inputId": "time-input",
  "inputName": "time",
  "value": "",
  "isTwentyFourHourFormat": true,
  "size": "",
  "inputWidth": null,
  "validationMessage": "",
  "validation": false,
  "isValid": true,
  "twentyFourHourOnly": false,
  "twelveHourOnly": false,
  "hideTimepickerBtn": false,
  "hideSeconds": false,
  "required": false,
  "timeInputThrottleMs": 50,
  "disabled": false
}</pre>
  </plumage-timepicker-component>
</timepicker-manager>
`;
